kube/centos-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: centos
  name: centos
spec:
  containers:
  - image: centos:7
    name: centos
    command: ["/bin/sleep", "3650d"]
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
