kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: veeva-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: veeva-ingress.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-release-nginx
            port:
              number: 80
